# Rust_Learning

./: .gitignore
ch1/ex1_2/: Cargo.toml
ch1/ex1_2/src/: main.rs
ch1/hello2/src/: main.rs
ch2/grep_lite/src/: main.rs
ch2/grep_lite_2/: Cargo.toml  nate_the_snake.txt  test.txt
ch2/grep_lite_2/src/: main.rs
ch2/mandle_brat_fromscratch/: Cargo.toml
ch2/mandle_brat_fromscratch/src/: main.rs
ch2/ok/: ok.rs
ch2/try_into/src/: main.rs
ch5/cpu_emulator/: instruction_list.txt  program.txt  program_lean.txt
ch5/cpu_emulator/src/: main.rs
ch6/pointers/src/: main.rs
ch8/rpg/src/: main.rs
other/key_logger/: Cargo.toml  keys.txt
other/key_logger/src/: main.rs
other/oxodized_discord_bot/: Cargo.toml
other/oxodized_discord_bot/src/: main.rs
other/preceptron/: Cargo.toml  index.html  readme.md
other/preceptron/html/: function_space.js  index.css  index.html  index.js
other/preceptron/src/: lib.rs  main.rs
other/slint_test/: Cargo.toml
other/snake/: Cargo.toml
other/snake/src/: main.rs
