[package]
name = "oxodized_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
ureq = "2.5.0"
regex = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }